# privacy-kpis-measurement

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.brave  Dockerfile.chrome  Dockerfile.chrome-ubo  Dockerfile.chromium  Dockerfile.firefox  README.md  brave-build.sh  brave-run.sh  build-containers.sh  check.sh  cleanup_docker_volumes.sh  environment.py  extract.py  persist.py  process.py  query.py  record.py  requirements.txt  run.py  runall.sh  rundaily.sh  serialize.py  sink.py  source.py  stats.py
batch/: extract.fish  serialize.fish
measurements-scripts/: Makefile  categorize.py  disconnect-blacklist.json  measurements.py  ops.py  requirements.txt  splitTrace.py  statsRunner.py  utilities.py
measurements-scripts/plots/: Makefile  plotBars.gn  plotCDF.gn  plotCandles.gn
measurements-scripts/plots/sites-per-tracker_B2/: alexa_fp_per_tp_cdf.eps  both_fp_per_tp_cdf.eps  chrome-alexa-fp_per_tp_cdf.tsv  chrome-all-fp_per_tp_cdf.tsv  chrome-brave-alexa-fp_per_tp_cdf.tsv  chrome-brave-all-fp_per_tp_cdf.tsv  chrome-brave-twitter-fp_per_tp_cdf.tsv  chrome-twitter-fp_per_tp_cdf.tsv  chrome-ubo-alexa-fp_per_tp_cdf.tsv  chrome-ubo-all-fp_per_tp_cdf.tsv  chrome-ubo-twitter-fp_per_tp_cdf.tsv  firefox-alexa-fp_per_tp_cdf.tsv  firefox-all-fp_per_tp_cdf.tsv  firefox-twitter-fp_per_tp_cdf.tsv  safari-alexa-fp_per_tp_cdf.tsv  safari-all-fp_per_tp_cdf.tsv  safari-twitter-fp_per_tp_cdf.tsv  twitter_fp_per_tp_cdf.eps
measurements-scripts/plots/token-locations_G10/: alexa_token_locations.eps  alexa_token_locations.tsv  all_token_locations.tsv  token_locations.eps  twitter_token_locations.eps  twitter_token_locations.tsv
measurements-scripts/plots/trackers-per-browser_B1/: tpPerBrowser_absolutes.tsv  tpPerBrowser_percentages.tsv  trackers_per_browser.eps  trackers_per_browser_abs.eps  trackers_per_browser_perc.eps
measurements-scripts/plots/trackers-per-browser_per_dataset_F8/: twitter_fp_per_tp_cdf.eps
measurements-scripts/plots/trackers-per-category_D6/: all_browsers_3p_per_category.eps  all_browsers_3p_per_category.tsv  chrome-brave_3p_per_category.eps  chrome-brave_3p_per_category.tsv  chrome-ubo_3p_per_category.eps  chrome-ubo_3p_per_category.tsv  chrome_3p_per_category.eps  chrome_3p_per_category.tsv  firefox_3p_per_category.eps  firefox_3p_per_category.tsv  safari_3p_per_category.eps  safari_3p_per_category.tsv
privacykpis/: args.py  common.py  consts.py  filters.py  persist.py  record.py  redirects.py  requirements.txt  serialize.py  stats.py  stats_filters.py  stats_utilities.py  tokenizing.py  types.py
privacykpis/argparse/: types.py
privacykpis/browsers/: __init__.py  chrome_linux.py  chrome_macos.py  firefox_linux.py  firefox_macos.py  safari.py
privacykpis/environment/: __init__.py  default.py  macos.py
privacykpis/environments/: default.py  linux.py  macos.py
privacykpis/stats/: __init__.py  filters.py  utilities.py
process/: README.txt  expand.py  extract.fish  serialize.fish
resources/certs/: mitmproxy-ca-cert.p12  mitmproxy-ca-cert.pem  mitmproxy-ca.p12  mitmproxy-ca.pem
resources/misc/: chrome_policy.json
resources/policies/: recommended_policies.json
resources/profiles/firefox/: SiteSecurityServiceState.txt  addonStartup.json.lz4  cert9.db  cookies.sqlite  extensions.json  handlers.json  key4.db  permissions.sqlite  pkcs11.txt  prefs.js  protections.sqlite  search.json.mozlz4  sessionstore.jsonlz4  storage.sqlite  times.json  xulstore.json
resources/profiles/firefox/datareporting/: session-state.json  state.json
resources/profiles/firefox/datareporting/archived/2020-02/: 1581024341139.c5e9ff87-62ef-be40-a82f-e5265d90fe4a.new-profile.jsonlz4  1581024341149.dd3bfba0-adb7-f149-aa9e-02e175176751.event.jsonlz4  1581024341153.a123351b-c2e4-d34b-a382-2f04aec05fd0.main.jsonlz4  1581024341155.cc6e7bb8-4b8d-2d43-af7c-1dd6dc48e84e.first-shutdown.jsonlz4  1581380272198.51e2a213-66fe-054b-a196-43821d1c94ea.new-profile.jsonlz4  1581380272216.7e1d8235-66db-444b-917a-d339a3e2b84e.event.jsonlz4  1581380272221.bb87f7cf-5c37-9946-a8cb-f1b5c6ad58c9.main.jsonlz4  1581380272222.f6bb6370-78cc-4040-bb17-a1c89c9b97d9.first-shutdown.jsonlz4  1581381028377.504218d4-eeff-cf4b-b864-b14274942317.health.jsonlz4  1581381187829.5165203a-621d-9a4f-b76a-44a1d2188f27.health.jsonlz4  1581381187838.f18d43b2-2ca1-9344-a649-5c9190c7668c.main.jsonlz4  1581381315659.8e2798cd-0e1e-9d4b-a5ef-2ed4af4ee89b.health.jsonlz4  1581382447813.1fe79def-81b9-984d-b691-a3d28521c3eb.event.jsonlz4  1581382447815.0e52e281-5493-af4b-ba2e-17228e8e0762.health.jsonlz4  1581382447830.8478fe92-bf9d-2540-a125-f0901d7100ee.main.jsonlz4
resources/profiles/firefox/saved-telemetry-pings/: 504218d4-eeff-cf4b-b864-b14274942317  8e2798cd-0e1e-9d4b-a5ef-2ed4af4ee89b  a123351b-c2e4-d34b-a382-2f04aec05fd0  bb87f7cf-5c37-9946-a8cb-f1b5c6ad58c9  c5e9ff87-62ef-be40-a82f-e5265d90fe4a  cc6e7bb8-4b8d-2d43-af7c-1dd6dc48e84e  dd3bfba0-adb7-f149-aa9e-02e175176751
resources/profiles/firefox/sessionstore-backups/: previous.jsonlz4  upgrade.jsonlz4-20200117190643
resources/profiles/firefox/startupCache/: webext.sc.lz4
resources/profiles/firefox/storage/default/moz-extension+++2f95e299-f94e-6a47-bd78-003ba19be95b^userContextId=4294967295/: .metadata-v2
resources/profiles/firefox/storage/default/moz-extension+++2f95e299-f94e-6a47-bd78-003ba19be95b^userContextId=4294967295/idb/: 3647222921wleabcEoxlt-eengsairo.sqlite
resources/profiles/firefox/storage/default/moz-extension+++5219817d-6939-0a42-9d6e-9eceee9e4778^userContextId=4294967295/: .metadata-v2
resources/profiles/firefox/storage/default/moz-extension+++5219817d-6939-0a42-9d6e-9eceee9e4778^userContextId=4294967295/idb/: 3647222921wleabcEoxlt-eengsairo.sqlite
resources/profiles/firefox/storage/permanent/chrome/: .metadata-v2
resources/profiles/firefox/storage/permanent/chrome/idb/: 1451318868ntouromlalnodry--epcr.sqlite  1657114595AmcateirvtiSty.sqlite  2823318777ntouromlalnodry--naod.sqlite  2918063365piupsah.sqlite  (+2 more)
resources/scripts/: log_headers.py
scripts/: install_osx.sh  uninstall_osx.sh
utils/: expand.py  flatten.py  serialize.fish
